# combRUM

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  blp_bundle_demand.py  network_formation.py  peer_effects_large_network.py  quickstart.py  tiny_oracle.py  unitdemand_blp_large.py
notebooks/: 01_quickstart.ipynb  02_blp_bundle_demand.ipynb  03_network_formation.ipynb  04_unitdemand_blp_large.ipynb  05_peer_effects_large_network.ipynb  06_combinatorial_auction.ipynb
src/combrum/: __init__.py  _bundle_key.py  activity.py  bootstrap.py  bootstrap_distributed.py  callbacks.py  certification.py  context.py  cut_policies.py  demand.py  dual.py  dualstore.py  formulation.py  informed_schedule.py  interface_resolution.py  master.py  model.py  oracle.py  parameters.py  policies.py  randomness.py  reductions.py  result.py  rowgen.py  runinfo.py  schedule.py  solver_settings.py  (+1 more)
tests/: README.md  _family_oracles.py  _walk.py  conftest.py  test_activity.py  test_bootstrap_distributed.py  test_bootstrap_serial_backend.py  test_callbacks.py  test_commprobe.py  test_context.py  test_context_builder.py  test_cut_duals_public.py  test_cut_policies.py  test_demand_certification.py  test_distributed_context.py  test_distributed_equivalence.py  test_driver_loop.py  test_dual.py  test_dualstore.py  test_either_one.py  test_estimate_callback.py  test_estimate_distributed.py  test_formulation_contract.py  test_formulations.py  test_freeze_surface.py  test_hard_clauses.py  test_informed_schedule.py  test_master_contract.py  test_masters.py  test_mpi_transport.py  test_observed_features.py  test_owner_rank.py  test_parameters.py  test_penalty.py  test_persistent_master.py  test_persistent_master_rhs.py  test_policy_contract.py  test_probes.py  test_public_package.py  test_randomness.py  (+13 more)
(+35 files in other folders)
