[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "combRUM"
dynamic = ["version"]
description = "Estimate combinatorial random utility models with large-scale linear programming."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Enzo Di Pasquale", email = "ed2189@nyu.edu" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "econometrics",
  "random utility",
  "discrete choice",
  "combinatorial optimization",
  "bootstrap",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/enzodipasquale/combRUM"
Repository = "https://github.com/enzodipasquale/combRUM"
Issues = "https://github.com/enzodipasquale/combRUM/issues"

[project.optional-dependencies]
examples = [
  "highspy>=1.7",
  "linearmodels>=7.0",
  "scipy>=1.10",
]
notebooks = [
  "highspy>=1.7",
  "ipykernel>=6.0",
  "linearmodels>=7.0",
  "scipy>=1.10",
]
highs = ["highspy>=1.7"]
gurobi = ["gurobipy>=10.0", "scipy>=1.10"]
mpi = ["mpi4py>=4.0"]

# Version is single-sourced from the package so releases can't drift from code.
[tool.hatch.version]
path = "src/combrum/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/combrum"]

[tool.hatch.build.targets.sdist]
only-include = [
  ".gitignore",
  "CITATION.cff",
  "LICENSE",
  "README.md",
  "examples",
  "notebooks",
  "pyproject.toml",
  "src",
]
